fixed: alignment of decimal and multi button

--- a/style.css
+++ b/style.css
@@ -79,6 +79,8 @@ h1{
     justify-content: center;
     align-items: center;
     background-color: rgba(179, 186, 186, 0.4);
+    font-size: 2.5rem;
+    overflow: hidden;
     
 }
 .keyboard .keys:hover{
@@ -91,11 +93,6 @@ h1{
     border-radius: 50%;
 }
 
-.keyboard .keys{
-    font-size: 2.5rem;
-    overflow: hidden;
-    
-}
 .keys .key{
     width: 100%;
     height: 100%;
@@ -119,6 +116,12 @@ h1{
 }
 .keyboard .equal:hover{
     background-color: rgb(24, 189, 126);
+}
+.keyboard .multi{
+    margin-top: 10px;
+}
+.keyboard .dot{
+    margin-top: -10px;
 }
 
 @media screen and (max-width: 425px) {
